Fix project video overlap with navigation menu

--- a/common-styles/website-style.css
+++ b/common-styles/website-style.css
@@ -5,6 +5,8 @@ nav {
     top: 0;
 
     padding: 15px 0px 15px;
+
+    z-index: 1;
 }
 
 .nav-menu {
